--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,10 +1,18 @@
 * {
-margin: 0;
-padding: 0;
+    margin: 0;
+    padding: 0;
 }
-.container{
-    max-width: 1300px;
+
+.container {
+    max-width: 1340px;
     width: 100%;
     margin: 0 auto;
 }
 
+ul li {
+    list-style: none;
+}
+
+li a {
+    text-decoration: none;
+}
